Bug 497029 - Notes outputs backwards
Summary: Notes outputs backwards
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.1
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-04 09:18 UTC by Dr Liam Mistry
Modified: 2024-12-06 18:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dr Liam Mistry 2024-12-04 09:18:40 UTC
Within any of my projects, opening and writing in a "notes" tab (in windows and Mac) has a strange bug where the text is output backwards. 


STEPS TO REPRODUCE
1. Open Labplot2
2. New Note
3. type

OBSERVED RESULT
Text is output backwards, from the left hand corner. 


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: Yes
macOS: Yes

ADDITIONAL INFORMATION
Comment 1 Alexander Semke 2024-12-06 10:36:57 UTC
Git commit 43ac6f8255174a6473dc17d5e0d4b0171c860866 by Alexander Semke.
Committed on 06/12/2024 at 07:34.
Pushed by asemke into branch 'master'.

Make the changes in Note undo/redo-able and fix the the text cursor jumping to the beginning of the line when typing in text in the note.
FIXED-IN: 2.12

M  +2    -0    ChangeLog
M  +60   -39   src/backend/note/Note.cpp
M  +10   -16   src/backend/note/Note.h
M  +29   -10   src/frontend/dockwidgets/NoteDock.cpp
M  +7    -2    src/frontend/dockwidgets/NoteDock.h
M  +32   -5    src/frontend/note/NoteView.cpp
M  +3    -3    src/frontend/note/NoteView.h

https://invent.kde.org/education/labplot/-/commit/43ac6f8255174a6473dc17d5e0d4b0171c860866
Comment 2 Alexander Semke 2024-12-06 18:23:05 UTC
(In reply to Dr Liam Mistry from comment #0)
> Within any of my projects, opening and writing in a "notes" tab (in windows
> and Mac) has a strange bug where the text is output backwards. 
Thanks for reporting this issue. We fixed it and the fix is going to be part of the next release 2.12 planned soon.