Make the changes in Note undo/redo-able and fix the the text cursor jumping to the beginning of the line when typing in text in the note.

BUG: 497029
FIXED-IN: 2.12